# one-night-werewolf-ai

./: README.md  game_config.json  nighttime-daytime-implementation-plan.md  play.py  pyproject.toml  setup.py
game_agents/: __init__.py  agent_registry.py  base_agent.py  common_tools.py  drunk.py  hunter.py  insomniac.py  mason.py  minion.py  robber.py  seer.py  tanner.py  troublemaker.py  villager.py  werewolf.py
game_context/: __init__.py  game_context.py  game_state.py  messages.py  roles.py  session.py
