[project]
name = "one-night-werewolf-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Brennan Beal",email = "brennanbeal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
